# vsix_skills

./: README.md
.agents/plugins/: marketplace.json
.github/workflows/: validate-skills.yml
catalog/plugins/: build-ios-apps.json  build-macos-apps.json  build-web-apps.json  build-web-data-visualization.json  figma.json  game-studio.json  hyperframes.json  product-design.json  remotion.json  superpowers.json  test-android-apps.json  zotero.json
docs/: skill-intake-sop.md  skill-review-2026-07-16.md  skill-selection-guidelines.md
plugins/build-ios-apps/: .mcp.json  README.md  UPSTREAM.md
plugins/build-macos-apps/: README.md  UPSTREAM.md
plugins/build-web-apps/: README.md  UPSTREAM.md
plugins/build-web-data-visualization/: UPSTREAM.md
plugins/game-studio/: UPSTREAM.md
plugins/hyperframes/: README.md  UPSTREAM.md
plugins/remotion/: LICENSE  (+2 more)
scripts/: awesome-stars-skill-sources.json  generate-catalog.mjs  import-awesome-stars-skills.py  import-hermes-skills.py  validate-skills.mjs
skills/code-analysis/: SKILL.md  pyproject.toml  requirements.txt  skill.json
skills/code-analysis/agents/: openai.yaml
skills/code-analysis/references/: metrics-guide.md
skills/code-analysis/src/: main.py  scanner.py
skills/code-analysis/src/analyzers/: base_analyzer.py  cadence_signal_analyzer.py  code_quality_analyzer.py  code_style_analyzer.py  commit_analyzer.py  efficiency_analyzer.py  work_habit_analyzer.py
skills/code-analysis/src/narrator/: reflection_narrator.py
skills/code-analysis/src/reporters/: html_reporter.py  markdown_reporter.py  pdf_reporter.py
(+6172 files in other folders)
