[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-analysis-skills"
version = "1.1.0"
description = "Git-history reflection tool for self-introspection. Self-scope by default; multi-author analysis requires explicit, per-person consent. Not for HR / ranking / surveillance use."
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "gitpython>=3.1.40",
    "radon>=6.0.1",
    "pydriller>=2.6",
    "tabulate>=0.9.0",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
]

[project.scripts]
code-analysis = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
